add vue pages under demo

--- a/Samples/TypeScript/Demo/tsconfig.json
+++ b/Samples/TypeScript/Demo/tsconfig.json
@@ -10,7 +10,7 @@
     "sourceMap": true,
     "baseUrl": "./",
     "paths": {
-      "@framework/*": ["../../../../../Framework/src/*"]
+      "@framework/*": ["../../../Framework/src/*"]
     },
     "noImplicitAny": true,
     "useUnknownInCatchVariables": true
