--- a/Samples/TypeScript/Demo/package.json
+++ b/Samples/TypeScript/Demo/package.json
@@ -42,7 +42,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
     "url": "^0.11.3",
@@ -64,6 +64,8 @@
     "node-polyfill-webpack-plugin": "^2.0.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
+    "postcss-import": "^15.1.0",
+    "svgo": "^3.1.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.2.5",
     "whatwg-fetch": "^3.6.19"
