--- a/Framework/tsconfig.json
+++ b/Framework/tsconfig.json
@@ -11,7 +11,8 @@
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "noImplicitAny": true,
-    "useUnknownInCatchVariables": true
+    "useUnknownInCatchVariables": true,
+    "allowJs": true
   },
   "include": [
     "src/**/*.ts",
